<resources>
    <string name="app_name">NewsApplication</string>
    <string name="article_name">Photo proves US star is a cheat code as world record obliterated - Fox Sports</string>
    <string name="article_content">American Sydney McLaughlin has shattered her own 400m hurdles world record at the world athletics championships, leaving fans lost for words.\n\nMcLaughlin, the reigning Olympic champion, was the red-hot favourite and absolutely smashed her own world record by nearly a second in the final on Saturday in Eugene, Oregon.\n\nThe 22-year-old was streaks ahead of the field well before the turn and left her world-class rivals in her wake to cross the line in 50.68sec.\n\nThe incredible time chopped nearly a full second off her previous mark of 51.41, set at last year’s Tokyo Olympics.</string>
    <string name="categories_notice">Choose a category to
start reading</string>
    <string name="business_text">business</string>
    <string name="entertainment_text">entertainment</string>
    <string name="general_text">general</string>
    <string name="health_text">health</string>
    <string name="science_text">science</string>
    <string name="sports_text">sports</string>
    <string name="technology_text">technology</string>
    <string name="first_article_title">10 of the Cheapest and Healthiest Ways\nto Feed a Group, According to Reddit...</string>
    <string name="journalist_PedroBerrill">Pedro Berrill</string>
    <string name="second_article_title">Nasa set to announce plans to return samples from Mars back to Earth</string>
    <string name="journalist_AnnaDietz">Anna Dietz</string>
    <string name="journalist_KrisHolt">Kris Holt</string>
    <string name="basketball_article_title">Lebron James, Rick and Morty are coming\nto ‘MultiVersus’</string>
    <string name="first_article_time">3 hours ago</string>
    <string name="second_article_time">11 hours ago</string>
    <string name="third_article_time">12 hours ago</string>
</resources>