<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/secondArticleBackground"
        android:layout_width="370dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/firstArticleBackground"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/round_rectangular"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <ImageView
        android:id="@+id/secondArticlePic"
        android:layout_width="370dp"
        android:layout_height="147dp"
        app:layout_constraintStart_toStartOf="@id/secondArticleBackground"
        app:layout_constraintEnd_toEndOf="@id/secondArticleBackground"
        app:layout_constraintTop_toTopOf="@id/secondArticleBackground"
        android:src="@drawable/second_article_pic"/>

    <TextView
        android:id="@+id/secondArticleTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/secondArticlePic"
        app:layout_constraintStart_toStartOf="@id/firstArticleTitle"
        android:text="@string/second_article_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/secondArticleJournalist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/journalist_AnnaDietz"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/secondArticleTitle"
        app:layout_constraintStart_toStartOf="@id/secondArticleTitle"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/secondArticleUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11 hours ago"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/secondArticleJournalist"
        app:layout_constraintEnd_toEndOf="@id/secondArticleBackground"
        android:layout_marginRight="10dp"/>

    <ImageView
        android:id="@+id/firstArticleBackground"
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/round_rectangular"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="80dp" />

    <ImageView
        android:id="@+id/firstArticlePic"
        android:layout_width="370dp"
        android:layout_height="147dp"
        app:layout_constraintStart_toStartOf="@id/firstArticleBackground"
        app:layout_constraintEnd_toEndOf="@id/firstArticleBackground"
        app:layout_constraintTop_toTopOf="@id/firstArticleBackground"
        android:src="@drawable/first_article_pic"/>

    <TextView
        android:id="@+id/firstArticleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstArticlePic"
        app:layout_constraintStart_toStartOf="@id/firstArticleBackground"
        android:text="@string/first_article_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/firstArticleJournalist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/journalist_PedroBerrill"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/firstArticleTitle"
        app:layout_constraintStart_toStartOf="@id/firstArticleTitle"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/firstArticleUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3 hours ago"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/firstArticleJournalist"
        app:layout_constraintEnd_toEndOf="@id/firstArticleBackground"
        android:layout_marginRight="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>